# EchoMimic

./: pyproject.toml
src/echomimic/: __init__.py
src/echomimic/models/: attention.py  face_locator.py  mutual_self_attention.py  transformer_3d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d_blocks.py
src/echomimic/pipelines/: pipeline_echo_mimic.py  pipeline_echo_mimic_acc.py  pipeline_echo_mimic_pose.py  pipeline_echo_mimic_pose_acc.py
src/echomimic/utils/: draw_utils.py  face_landmark.py  img_utils.py  mp_utils.py  step_func.py
